# tidb-oracle

./: .dockerignore  .env.example  .gitignore  README.md
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260218_000001_initial.py  20260224_000002_add_feishu_source_type_and_kb_config_table.py  20260225_000001_add_llm_config_to_kb_config.py  20260227_000001_add_persona_prompt_to_kb_config.py  20260227_000002_add_google_drive_user_credentials.py  20260227_000003_add_feishu_oauth_and_multi_root.py  20260301_000004_add_gtm_modules_phase1.py  20260302_000005_add_memory_source_type_enum.py
api/app/: cli.py  main.py  worker.py
api/app/api/: deps.py  router.py
api/app/core/: constants.py  settings.py
api/app/db/: init_db.py  session.py
api/app/ingest/: chorus_connector.py  drive_connector.py  drive_ingestor.py  feishu_connector.py  feishu_ingestor.py  transcript_ingestor.py
api/app/models/: __init__.py  entities.py
api/app/prompts/: personas.py  templates.py
api/app/retrieval/: service.py  tidb_docs.py  types.py
api/app/schemas/: calls.py  chat.py  gtm_modules.py  kb.py  kb_config.py  market_research.py  messaging.py
api/app/services/: artifact_generator.py  audit.py  chat_orchestrator.py  drive_sync_jobs.py  embedding.py  feishu_credentials.py  feishu_oauth.py  google_drive_credentials.py  google_drive_oauth.py  gtm_modules.py  llm.py  market_research.py  memory.py  messaging.py  query_rewrite.py  slack.py  token_crypto.py
api/app/utils/: chunking.py  email_utils.py  hashing.py  redaction.py
ui/: Dockerfile  (+5 more)
(+109 files in other folders)
